--- a/src/todo
+++ b/src/todo
@@ -1,3 +1,18 @@
+Important avant la 2.2 finale:
+
+[done] Verifier si les connections a la base sont bien fermées lors de l'arret de robinhood
+
+* option --check-watermarks pour verifier uniquement les triggers sans purger.
+	=> DOC
+
+* option "notify" dans les triggers pour envoyer un mail lorsque ça matche.
+
+* Trace lorsque le readdir echoue.
+
+* CREATE record on already existing entry: afficher le chemin si on l'a
+
+* Event Handler => Changelog Reader
+
 Pusher dans la repo oracle
 
 Doc:
