--- a/src/todo
+++ b/src/todo
@@ -1,12 +1,6 @@
 Important avant la 2.2 finale:
 
-[done] Verifier si les connections a la base sont bien fermées lors de l'arret de robinhood
-[done] option --check-watermarks pour verifier uniquement les triggers sans purger.
-	=> DOC
-[done] option "notify" dans les triggers pour envoyer un mail lorsque ça matche.
-	=> DOC
-
-* Trace lorsque le readdir echoue.
+[done] * Trace lorsque le readdir echoue.
 
 * CREATE record on already existing entry: afficher le chemin si on l'a
 
@@ -22,6 +16,9 @@ Doc:
      target = A
 	=> OK
 	inverse => NOK
+
+* option --check-watermarks pour verifier uniquement les triggers sans purger.
+* option "notify" dans les triggers pour envoyer un mail lorsque ça matche.
 
 Features:
 =========
