--- a/src/todo
+++ b/src/todo
@@ -1,3 +1,11 @@
+[OK] LUSTRE_USER_MAGIC_V3 => pool support
+[OK] non reg pool support
+[OK] pb matching class si stripe pas recupere
+
+- return value of robinhood when it is killed...
+
+- selection des tests de non reg suivant le purpose
+
 @TODO if the command is '--migrate-class', '--migrate-user', '--migrate-group',
       check that the entry still matches
 
