--- a/src/todo
+++ b/src/todo
@@ -1,5 +1,8 @@
 - fixer le bug du test 22 pour les prepared statements
 
+- verifier/cleaner le patch dans l'entry processor
+- mettre stage=-1 pour tous les acknowledge (TRUE)
+
 - backup:
 	tout flusher même si synchro
 
