new trigger param: alert_lw, notify->notify_hw, fs path and machine name in mail alert title

--- a/src/todo
+++ b/src/todo
@@ -1,3 +1,8 @@
+Non reg:
+- mise a jour notify_hw, alert_lw
+- trigger 'always'
+
+
 - fixer le bug du test 22 pour les prepared statements
 
 - backup:
