--- a/src/todo
+++ b/src/todo
@@ -1,3 +1,11 @@
+Non reg:
+- mise a jour notify_hw, alert_lw
+- 'periodic' trigger
+- checkonly sur un periodic trigger
+
+-> implementer alert_lw
+-> implementer trigger periodic
+ 
 - list_mgr/listmgr_remove.c
 	escape string in softrm function
 
@@ -44,8 +52,13 @@ Push 220p2 to oracle repository
 Doc:
 ====
 * doc backend ext/backup
-* adding doc about syslog logging
-* adding doc about exit_on_timeout
+* add doc about syslog logging
+* add doc about exit_on_timeout
+* add doc about syslog logging
+* add doc about exit_on_timeout
+* add doc about ost_index criteria
+* new purge trigger 'periodic'
+* notify_hw, alert_lw
 
 (* config sqlite et disclaimer)
 * fileclasses are matched in the order they are targetted
