Saving directory metadata to backend

--- a/src/todo
+++ b/src/todo
@@ -1,18 +1,15 @@
 BACKUP:
  - backup quotidien de la base robinhood
- x CREATE du repertoire parent avant
  - CREATE du fichier dans le sbin?
- x prise de utime avant transfert?
- x verif apres transfert ?
- x commande de migration unitaire
-	-> non reg
  (- affichage de la cos choisie dans les logs)
  (- mapping chemin_montage/commande copie)
  - mise a jour du delai de suppression dans le backend
- - commande de resync que des md
- - backup des md des repertoires
  - commande de recovery
- - rbh-config backup_db
+ - commande de resync que des md
+
+lustre-HSM:
+ - sauvegarde des metadata dans une table (au release)
+ - conserver les infos sur tt les entrees (rep, ...) a des fins de backup
 
 - list_mgr/listmgr_remove.c
 	escape string in softrm function
