--- a/src/todo
+++ b/src/todo
@@ -1,10 +1,13 @@
+migrate one file: support flags
+
 BACKUP:
  - backup quotidien de la base robinhood
  - CREATE du fichier dans le sbin?
  (- affichage de la cos choisie dans les logs)
  (- mapping chemin_montage/commande copie)
  - mise a jour du delai de suppression dans le backend
- - commande de recovery
+ x commande de recovery
+ - nonreg recovery
  - commande de resync que des md
 
 lustre-HSM:
