--- a/src/todo
+++ b/src/todo
@@ -34,21 +34,21 @@ Push 220p2 to oracle repository
 
 Doc:
 ====
-* add doc about syslog logging
+x add doc about syslog logging
 * add doc about exit_on_timeout
-* add doc about ost_index criteria
-* new purge trigger 'periodic'
-* notify_hw, alert_lw
+x add doc about ost_index criteria => 2.3
+x new purge trigger 'periodic'
+x notify_hw, alert_lw
 
 (* config sqlite et disclaimer)
-* fileclasses are matched in the order they are targetted
+x fileclasses are matched in the order they are targetted
  /!\ target =  A_inter_B
      target = A
 	=> OK
 	inverse => NOK
 
 Commandes :
-* --migrate-class
+//* --migrate-class
 * --purge-class
 
 Features:
