--- a/src/todo
+++ b/src/todo
@@ -1,3 +1,6 @@
+Release notes: attention "-P /mnt/dir" match the directory itself
+			 "-P /mnt/dir/*" match the subentries
+
 - support filter for softrm list
 - add signal handler to recovery function
 - command for retrieving softely removed entry
