No error message on expected "dup key" or "no such table" errors

--- a/src/todo
+++ b/src/todo
@@ -1,3 +1,5 @@
+Voir pourquoi un update des stripe_info renvoie une duplicate entry error.
+
 Replace:
     --dump-user user
         Dump all entries for the given user.
