--- a/src/todo
+++ b/src/todo
@@ -1,3 +1,6 @@
+- completer TRAC
+- Fix segfault when reloading config without purge triggers
+
 Voir pourquoi un update des stripe_info renvoie une duplicate entry error.
 
 Replace:
