tests commit and push to sogeti server

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+Add changes to tests sogeti git repository server
+
 Changes between version 2.3.2 and 2.3.3:
 [webgui]
     - added FS name to page title and page header
