Better management of errors in scan completion command. Added non-regression tests of this feature (tests 107a,107b).

--- a/src/todo
+++ b/src/todo
@@ -1,3 +1,8 @@
+non-reg:
+completion command OK
+completion command with unmatched {
+
+
 - db diff option: list changes since xxx
 - apply
 - bench diff
