--- a/src/todo
+++ b/src/todo
@@ -1,3 +1,8 @@
+symlink support in recovery, diff_pipeline, ...
+option: archive symlinks
+/!\ symlink change if inode recycling
+
+
 - db diff option: list changes since xxx
 - apply
 - bench diff
