non-regression test: disaster rercovery for symlinks with archive_symlinks=on/off

--- a/src/todo
+++ b/src/todo
@@ -1,7 +1,6 @@
-symlink support in recovery
-option: archive symlinks
 /!\ symlink change if inode recycling
 
+- complete apply-fs (+using recover for backup system)
 
 - db diff option: list changes since xxx
 - apply
