--- a/src/todo
+++ b/src/todo
@@ -1,5 +1,9 @@
 - support ost sets in rbh_find
 - non reg test for OST sets
+- drop Lustre 2.0 support (non splitted TIME)
+- ostset for commands
+
+- verifier comportement du pipeline dans le traitement des changelogs, etc...
 
 - recovery MDT with HSM: set status of files
 - recov-tools: must reset fid of OST objects after MDS recovery
